# SigenergyPythonAPI

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/SigenAPI/: api.py
