[project]
name = "SigenAPI"
version = "1.0.0"
authors = [
  { name="Pythonus Nation", email="" },
]
description = "Python API for Sigenergy SigenStor System"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SigenAPI"]

[project.urls]
Homepage = "https://github.com/pythonus-nation/SigenergyPythonAPI?tab=readme-ov-file"
Issues = "https://github.com/pythonus-nation/SigenergyPythonAPI/issues"
